Fixed done button rendering on Safari 12

--- a/docs/_sass/app.scss
+++ b/docs/_sass/app.scss
@@ -218,10 +218,10 @@ a {
 			line-height: 32px;
 			letter-spacing: 0.002em;
 		}
-
+		input.date {
+			margin-bottom: 50px;
+		}
 		.done {
-			position: relative;
-			top: 50px;
 			width: 100px;
 			height: 50px;
 			margin: 0 auto;
